--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,23 +5,24 @@
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
-    <div class="container">
-        <h2> We have a to-do list </h2>
-        <form action ="/addtask" method="POST">
-            <input type="text" name="newtask" placeholder="add new task"> 
-            <button> Add a Task </button>
-            <h2> Tasks </h2>
-            <% for( var i=0; i < tasks.length; i++){ %>
-                <li><input type="checkbox" name="check" value="<%= tasks[i]._id %>" /><%= tasks[i].item %></li>
-            <% } %>
-            <button formaction="/removetask" type="submit"> Remove Task </button>
-        </form>
-        <form action ="/deleteTodo" method="POST">
-            <h2> Completed task </h2>
-                <% for(var i = 0; i < completed.length; i++){ %>
-                    <li><input type="checkbox" name="delete" value="<%= completed[i] %>" /><%= completed[i] %></li>
+        <div class="container">
+            <h2> We have a to-do list </h2>
+            <form action ="/addtask" method="POST">
+                <input type="text" name="newtask" placeholder="add new task"> 
+                <button> Add a Task </button>
+                <h2> Tasks </h2>
+                <% for( var i=0; i < tasks.length; i++){ %>
+                    <li><input type="checkbox" name="check" value="<%= tasks[i]._id %>" /><%= tasks[i].item %></li>
                 <% } %>
-            <button formaction="/deleteTodo" type="submit"> Delete </button>
-        </form>
+                <button formaction="/removetask" type="submit"> Remove Task </button>
+            </form>
+            <form action ="/deleteTodo" method="POST">
+                <h2> Completed task </h2>
+                    <% for(var i = 0; i < completed.length; i++){ %>
+                        <li><input type="checkbox" name="delete" value="<%= completed[i] %>" /><%= completed[i] %></li>
+                    <% } %>
+                <button formaction="/deleteTodo" type="submit"> Delete </button>
+            </form>
+        </div> 
     </body>
 </html>
